rs_src/bindings.rs

#[test]
fn bindgen_test_layout_rt_device_graphic_info() {
    const UNINIT: ::core::mem::MaybeUninit<rt_device_graphic_info> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_device_graphic_info>(),
        16usize,
        concat!("Size of: ", stringify!(rt_device_graphic_info))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_device_graphic_info>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_device_graphic_info))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).pixel_format) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_graphic_info),
            "::",
            stringify!(pixel_format)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).bits_per_pixel) as usize - ptr as usize },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_graphic_info),
            "::",
            stringify!(bits_per_pixel)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).pitch) as usize - ptr as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_graphic_info),
            "::",
            stringify!(pitch)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).width) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_graphic_info),
            "::",
            stringify!(width)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).height) as usize - ptr as usize },
        6usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_graphic_info),
            "::",
            stringify!(height)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).framebuffer) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_graphic_info),
            "::",
            stringify!(framebuffer)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).smem_len) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_graphic_info),
            "::",
            stringify!(smem_len)
        )
    );
}
#[doc = " rectangle information structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_device_rect_info {
    #[doc = "< x coordinate"]
    pub x: rt_uint16_t,
    #[doc = "< y coordinate"]
    pub y: rt_uint16_t,
    #[doc = "< width"]
    pub width: rt_uint16_t,
    #[doc = "< height"]
    pub height: rt_uint16_t,
}
#[test]
fn bindgen_test_layout_rt_device_rect_info() {
    const UNINIT: ::core::mem::MaybeUninit<rt_device_rect_info> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_device_rect_info>(),
        8usize,
        concat!("Size of: ", stringify!(rt_device_rect_info))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_device_rect_info>(),
        2usize,
        concat!("Alignment of ", stringify!(rt_device_rect_info))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_rect_info),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_rect_info),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).width) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_rect_info),
            "::",
            stringify!(width)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).height) as usize - ptr as usize },
        6usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_rect_info),
            "::",
            stringify!(height)
        )
    );
}
#[doc = " graphic operations"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_device_graphic_ops {
    pub set_pixel: ::core::option::Option<
        unsafe extern "C" fn(
            pixel: *const core::ffi::c_char,
            x: core::ffi::c_int,
            y: core::ffi::c_int,
        ),
    >,
    pub get_pixel: ::core::option::Option<
        unsafe extern "C" fn(
            pixel: *mut core::ffi::c_char,
            x: core::ffi::c_int,
            y: core::ffi::c_int,
        ),
    >,
    pub draw_hline: ::core::option::Option<
        unsafe extern "C" fn(
            pixel: *const core::ffi::c_char,
            x1: core::ffi::c_int,
            x2: core::ffi::c_int,
            y: core::ffi::c_int,
        ),
    >,
    pub draw_vline: ::core::option::Option<
        unsafe extern "C" fn(
            pixel: *const core::ffi::c_char,
            x: core::ffi::c_int,
            y1: core::ffi::c_int,
            y2: core::ffi::c_int,
        ),
    >,
    pub blit_line: ::core::option::Option<
        unsafe extern "C" fn(
            pixel: *const core::ffi::c_char,
            x: core::ffi::c_int,
            y: core::ffi::c_int,
            size: rt_size_t,
        ),
    >,
}
#[test]
fn bindgen_test_layout_rt_device_graphic_ops() {
    const UNINIT: ::core::mem::MaybeUninit<rt_device_graphic_ops> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_device_graphic_ops>(),
        20usize,
        concat!("Size of: ", stringify!(rt_device_graphic_ops))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_device_graphic_ops>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_device_graphic_ops))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).set_pixel) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_graphic_ops),
            "::",
            stringify!(set_pixel)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).get_pixel) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_graphic_ops),
            "::",
            stringify!(get_pixel)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).draw_hline) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_graphic_ops),
            "::",
            stringify!(draw_hline)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).draw_vline) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_graphic_ops),
            "::",
            stringify!(draw_vline)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).blit_line) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_graphic_ops),
            "::",
            stringify!(blit_line)
        )
    );
}
pub const RT_HW_CACHE_OPS_RT_HW_CACHE_FLUSH: RT_HW_CACHE_OPS = 1;
pub const RT_HW_CACHE_OPS_RT_HW_CACHE_INVALIDATE: RT_HW_CACHE_OPS = 2;
pub type RT_HW_CACHE_OPS = core::ffi::c_uint;
extern "C" {
    pub fn rt_hw_cpu_icache_enable();
}
extern "C" {
    pub fn rt_hw_cpu_icache_disable();
}
extern "C" {
    pub fn rt_hw_cpu_icache_status() -> rt_base_t;
}
extern "C" {
    pub fn rt_hw_cpu_icache_ops(
        ops: core::ffi::c_int,
        addr: *mut core::ffi::c_void,
        size: core::ffi::c_int,
    );
}
extern "C" {
    pub fn rt_hw_cpu_dcache_enable();
}
extern "C" {
    pub fn rt_hw_cpu_dcache_disable();
}
extern "C" {
    pub fn rt_hw_cpu_dcache_status() -> rt_base_t;
}
extern "C" {
    pub fn rt_hw_cpu_dcache_ops(
        ops: core::ffi::c_int,
        addr: *mut core::ffi::c_void,
        size: core::ffi::c_int,
    );
}
extern "C" {
    pub fn rt_hw_cpu_reset();
}
extern "C" {
    pub fn rt_hw_cpu_shutdown();
}
extern "C" {
    pub fn rt_hw_cpu_arch() -> *const core::ffi::c_char;
}
extern "C" {
    pub fn rt_hw_stack_init(
        entry: *mut core::ffi::c_void,
        parameter: *mut core::ffi::c_void,
        stack_addr: *mut rt_uint8_t,
        exit: *mut core::ffi::c_void,
    ) -> *mut rt_uint8_t;
}
pub type rt_isr_handler_t = ::core::option::Option<
    unsafe extern "C" fn(vector: core::ffi::c_int, param: *mut core::ffi::c_void),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_irq_desc {
    pub handler: rt_isr_handler_t,
    pub param: *mut core::ffi::c_void,
    pub name: [core::ffi::c_char; 8usize],
    pub counter: rt_uint32_t,
}
#[test]
fn bindgen_test_layout_rt_irq_desc() {
    const UNINIT: ::core::mem::MaybeUninit<rt_irq_desc> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_irq_desc>(),
        20usize,
        concat!("Size of: ", stringify!(rt_irq_desc))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_irq_desc>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_irq_desc))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).handler) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_irq_desc),
            "::",
            stringify!(handler)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).param) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_irq_desc),
            "::",
            stringify!(param)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_irq_desc),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).counter) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_irq_desc),
            "::",
            stringify!(counter)
        )
    );
}
extern "C" {
    pub fn rt_hw_interrupt_init();
}
extern "C" {
    pub fn rt_hw_interrupt_mask(vector: core::ffi::c_int);
}
extern "C" {
    pub fn rt_hw_interrupt_umask(vector: core::ffi::c_int);
}
extern "C" {
    pub fn rt_hw_interrupt_install(
        vector: core::ffi::c_int,
        handler: rt_isr_handler_t,
        param: *mut core::ffi::c_void,
        name: *const core::ffi::c_char,
    ) -> rt_isr_handler_t;
}
extern "C" {
    pub fn rt_hw_local_irq_disable() -> rt_base_t;
}
extern "C" {
    pub fn rt_hw_local_irq_enable(level: rt_base_t);
}
extern "C" {
    pub fn rt_sched_unlock(level: rt_base_t);
}
extern "C" {
    pub fn rt_sched_lock() -> rt_base_t;
}
extern "C" {
    pub fn rt_hw_interrupt_is_disabled() -> rt_bool_t;
}
extern "C" {
    pub fn rt_hw_context_switch(from: rt_ubase_t, to: rt_ubase_t, to_thread: *mut rt_thread);
}
extern "C" {
    pub fn rt_hw_context_switch_to(to: rt_ubase_t, to_thread: *mut rt_thread);
}
extern "C" {
    pub fn rt_hw_context_switch_interrupt(
        context: *mut core::ffi::c_void,
        from: rt_ubase_t,
        to: rt_ubase_t,
        to_thread: *mut rt_thread,
    );
}
extern "C" {
    pub fn rt_hw_console_output(str_: *const core::ffi::c_char);
}
